--- a/index.html
+++ b/index.html
@@ -4,13 +4,61 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- font awesome stylesheet if needed -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" /> -->
     <link rel="stylesheet" href="style.css" />
     <title>Sticky Navbar</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <nav class="nav">
+      <div class="container">
+        <h1 class="logo"><a href="/index.html">My Website</a></h1>
+        <ul>
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="hero">
+      <div class="container">
+        <h1>Welcome to my Website</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, error!
+        </p>
+      </div>
+    </div>
+    <section class="container content">
+      <h2>Content One</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, culpa
+        quia. Voluptatem, perferendis consequuntur saepe neque harum consequatur
+        vel voluptate? Ab culpa, modi eaque eos natus molestias nihil similique
+        tempora neque a, rem doloribus fugiat, iure illum expedita ullam
+        delectus ipsam eligendi repudiandae hic consequatur at unde distinctio
+        dolore! Hic quasi veniam a esse, porro blanditiis quis neque totam
+        aspernatur alias modi maiores soluta illo, fuga consectetur perferendis,
+        eligendi voluptas quod! Ipsum perferendis ipsam dolorum cum nemo
+        reiciendis nesciunt vel porro hic, consequatur fuga modi illo deleniti
+        neque nam maxime non ab excepturi laborum dignissimos, itaque voluptas.
+        Fugit, exercitationem ipsam.
+      </p>
+
+      <h2>Content Two</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis vel
+        voluptate reprehenderit tempora provident dolorem, exercitationem rem
+        perferendis quibusdam quia laborum expedita! Provident explicabo atque
+        assumenda dignissimos numquam nobis blanditiis iure fugit ab quae animi
+        nemo ipsum eaque quisquam, magni commodi necessitatibus debitis
+        veritatis placeat? Placeat, in delectus. Magni saepe nesciunt nihil
+        odio. Nulla, nemo! Repudiandae vero inventore sequi itaque temporibus,
+        voluptatum consectetur numquam vel atque similique dicta at fuga eos
+        perspiciatis ullam consequatur non nostrum eaque doloremque officia
+        dolorem qui enim sint sit. Iusto, blanditiis nobis doloremque vitae
+        porro, exercitationem ipsum quisquam corporis ducimus beatae illo omnis
+        distinctio culpa?
+      </p>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
